created new notebook for project with easier navigation

--- a/Final Notebook.ipynb
+++ b/Final Notebook.ipynb
@@ -1,31 +1,75 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='table_of_contents'></a>\n",
+    "\n",
+    "0. [Import libraries](#imports)\n",
+    "1. [Import data](#import_data)\n",
+    "2. [Data exploration](#data_exploration)\n",
+    "3. [Data cleaning](#data_cleaning)\n",
+    "4. [Data preparation](#data_preparation)\n",
+    "5. [Benchmark model](#benchmark_model)<br>\n",
+    "6. [Feature engineering](#feature_engineering)\n",
+    "7. [Model training](#model_training)<br>\n",
+    "    7.1. [Decision Tree](#decision_tree)<br>\n",
+    "    7.2. [Random Forest](#random_forest)<br>\n",
+    "    7.3. [Comparing algorithm performances](#comparing_algorithm_performances)\n",
+    "8. [Tuning](#tuning)<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 0. Import libraries <a id='imports'></a>\n",
+    "[Back to top](#table_of_contents)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "86f724f7-4cd6-429e-9046-5ed182736f2a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Import data <a id='import_data'></a>\n",
+    "[Back to top](#table_of_contents)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "efc32e62-fb2b-4d3e-b0f8-90b4a8710e98",
    "metadata": {},
    "outputs": [],
    "source": [
-    "taxi_df = pd.read_parquet('Data/yellow_tripdata_2019-01.parquet')"
+    "taxi_jan_2019 = pd.read_parquet('Data/yellow_tripdata_2019-01.parquet')\n",
+    "taxi_df = pd.concat([taxi_jan_2019])                               "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "83be028c-e269-4307-b0ae-0390bfd068c0",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(7696617, 19)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -219,37 +263,86 @@
     }
    ],
    "source": [
+    "print(taxi_df.shape)\n",
     "taxi_df.head()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "ecaff06c-5f29-4bd0-9b0f-54340c27a662",
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(7696617, 19)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "taxi_df.shape"
+    "# 2. Data exploration <a id='data_exploration'></a>\n",
+    "[Back to top](#table_of_contents)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e894c100-7b82-4110-b90d-252db784dcf5",
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 3. Data cleaning <a id='data_cleaning'></a>\n",
+    "[Back to top](#table_of_contents)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. Data preparation <a id='data_preparation'></a>\n",
+    "[Back to top](#table_of_contents)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. Benchmark model <a id='benchmark_model'></a>\n",
+    "[Back to top](#table_of_contents)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6. Feature engineering <a id='feature_engineering'></a>\n",
+    "[Back to top](#table_of_contents)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 7. Model training <a id='model_training'></a>\n",
+    "[Back to top](#table_of_contents)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7.1. Decision tree <a id='decision_tree'></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7.2. Random forest <a id='random_forest'></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7.3. Comparing algorithm performances <a id='comparing_algorithm_performances'></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 8. Tuning <a id='tuning'></a>\n",
+    "[Back to top](#table_of_contents)"
+   ]
   }
  ],
  "metadata": {
@@ -272,5 +365,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 4
 }
