--- a/Final Notebook.ipynb
+++ b/Final Notebook.ipynb
@@ -1059,11 +1059,235 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7686676, 9)"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Removing rows with negative values\n",
+    "taxi_df_filtered = taxi_df[(taxi_df['total_amount']>0)&(taxi_df['total_amount']<200)]\n",
+    "taxi_df_filtered.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking for missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tpep_pickup_datetime         0\n",
+       "tpep_dropoff_datetime        0\n",
+       "passenger_count          28672\n",
+       "trip_distance                0\n",
+       "RatecodeID               28672\n",
+       "PULocationID                 0\n",
+       "DOLocationID                 0\n",
+       "payment_type                 0\n",
+       "total_amount                 0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "taxi_df_filtered.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#dropping missing values\n",
+    "taxi_df_filtered = taxi_df_filtered.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tpep_pickup_datetime     0\n",
+       "tpep_dropoff_datetime    0\n",
+       "passenger_count          0\n",
+       "trip_distance            0\n",
+       "RatecodeID               0\n",
+       "PULocationID             0\n",
+       "DOLocationID             0\n",
+       "payment_type             0\n",
+       "total_amount             0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "taxi_df_filtered.isna().sum()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# 4. Data preparation <a id='data_preparation'></a>\n",
     "[Back to top](#table_of_contents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tpep_pickup_datetime</th>\n",
+       "      <th>tpep_dropoff_datetime</th>\n",
+       "      <th>passenger_count</th>\n",
+       "      <th>trip_distance</th>\n",
+       "      <th>RatecodeID</th>\n",
+       "      <th>PULocationID</th>\n",
+       "      <th>DOLocationID</th>\n",
+       "      <th>payment_type</th>\n",
+       "      <th>total_amount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019-01-01 00:46:40</td>\n",
+       "      <td>2019-01-01 00:53:20</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>151</td>\n",
+       "      <td>239</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-01-01 00:59:47</td>\n",
+       "      <td>2019-01-01 01:18:59</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>239</td>\n",
+       "      <td>246</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-12-21 13:48:30</td>\n",
+       "      <td>2018-12-21 13:52:40</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>236</td>\n",
+       "      <td>236</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-11-28 15:52:25</td>\n",
+       "      <td>2018-11-28 15:55:45</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>193</td>\n",
+       "      <td>193</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-11-28 15:56:57</td>\n",
+       "      <td>2018-11-28 15:58:33</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>193</td>\n",
+       "      <td>193</td>\n",
+       "      <td>2</td>\n",
+       "      <td>55.55</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  tpep_pickup_datetime tpep_dropoff_datetime  passenger_count  trip_distance  \\\n",
+       "0  2019-01-01 00:46:40   2019-01-01 00:53:20              1.0            1.5   \n",
+       "1  2019-01-01 00:59:47   2019-01-01 01:18:59              1.0            2.6   \n",
+       "2  2018-12-21 13:48:30   2018-12-21 13:52:40              3.0            0.0   \n",
+       "3  2018-11-28 15:52:25   2018-11-28 15:55:45              5.0            0.0   \n",
+       "4  2018-11-28 15:56:57   2018-11-28 15:58:33              5.0            0.0   \n",
+       "\n",
+       "   RatecodeID  PULocationID  DOLocationID  payment_type  total_amount  \n",
+       "0         1.0           151           239             1          9.95  \n",
+       "1         1.0           239           246             1         16.30  \n",
+       "2         1.0           236           236             1          5.80  \n",
+       "3         1.0           193           193             2          7.55  \n",
+       "4         2.0           193           193             2         55.55  "
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "taxi_df_filtered.head()"
    ]
   },
   {
